--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/10/2020 05:54:00 PM</p>
+    <p class="lastupdate">09/10/2020 05:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">71.8&#176;F</td>
+        <td class="data">71.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">71.8&#176;F</td>
+        <td class="data">71.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">71.8&#176;F</td>
+        <td class="data">71.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.9&#176;F</td>
+        <td class="data">52.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">46%</td>
+        <td class="data">51%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.989 inHg (-0.012)</td>
+        <td class="data">29.987 inHg (-0.013)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph N (0&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="05:31:28 PM">
-            52.1</span><br/>
+          <span title="05:57:56 PM">
+            52.5</span><br/>
           <span title="12:06:48 AM">
             45.7</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">9 days, 3 hours, 7 minutes</td>
+      <td class="data">9 days, 3 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">9 days, 3 hours, 7 minutes</td>
+      <td class="data">9 days, 3 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
